--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,15 @@
-<!doctype html>
-<html lang='en'>
-
-<head>
-    <title>Chat</title>
-    <link rel='stylesheet' href='/stylesheets/style.css'>
-    </link>
-</head>
-
-<body>
-    <div id='content'>
-        <div id='room'></div>
-        <div id='room-list'></div>
-        <div id='messages'></div>
-        <form id='send-form'>
-            <input id='send-message' />
-            <input id='send-button' type='submit' value='Send' />
-            <div id='help'>
-                Chat commands:
-                <ul>
-                    <li>Change nickname: <code>/nick [username]</code></li>
-                    <li>Join/create room: <code>/join [room name]</code></li>
-                </ul>
-            </div>
-        </form>
-    </div>
-    <script src='/javascripts/socket.io.js' type='text/javascript'></script>
-</body>
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + Vue + TS</title>
+    <script type="module" crossorigin src="./assets/index.js"></script>
+    <link rel="stylesheet" href="./assets/index.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    
+  </body>
 </html>
