--- a/public/test.html
+++ b/public/test.html
@@ -44,6 +44,7 @@
             localPeer = new RTCPeerConnection({
                 configuration: {
                     iceServers: [
+                    { urls: 'stun:wee-whisper.com:3478'},
                     { urls: 'turn:wee-whisper.com:3478', username: 'turnusesr', credential: '123456'},
 
                     ]
@@ -74,6 +75,7 @@
             remotePeer = new RTCPeerConnection({
                 configuration: {
                     iceServers: [
+                    { urls: 'stun:wee-whisper.com:3478'},
                     { urls: 'turn:wee-whisper.com:3478', username: 'turnusesr', credential: '123456'},
                     ]
                 }
